--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "alex-ui-kit-project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack"
@@ -22,5 +22,6 @@
   "peerDependencies": {
     "react": "*",
     "react-dom": "*"
-  }
+  },
+  "files": ["dist"]
 }
