--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "devDependencies": {
     "@types/react": "^18.0.38",
+    "css-loader": "^6.7.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "style-loader": "^3.3.2",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
     "webpack": "^5.80.0",
@@ -23,5 +25,7 @@
     "react": "*",
     "react-dom": "*"
   },
-  "files": ["dist"]
+  "files": [
+    "dist"
+  ]
 }
